# sketch-image

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  release.yml
src/: main.py
src/sketch_image/: __init__.py  main.py
tests/: test_main.py
