[project]
name = "sketch-image"
version = "0.1.2"
description = "Convert images into sketches"
readme = "README.md"
authors = [
    { name = "Shreyam Pokharel", email = "pshreyam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
sketch-image = "sketch_image:convert"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra --cov=sketch_image --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]
