[metadata]
name = sketch-image
version = 0.0.1
author = Shreyam Pokharel
author_email = pshreyam@gmail.com
description = Convert images into sketches
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pshreyam/image-sketcher
project_urls =
    Bug Tracker = https://github.com/pshreyam/image-sketcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires=
    click==8.1.3
    numpy==1.23.4
    opencv-python==4.6.0.66

[options.entry_points]
console_scripts =
    sketch-image = sketch_image.__main__:convert
